# Simple-Http-Server-in-C

./: README.md
http-server/: CMakeLists.txt
http-server/include/: http-server.h
http-server/src/: http-server.c  index.html
